Fix refresh button bug and re-arrange table format
+ I change some code in getFromDatabase.java so that the refresh button work for employee window to show up.
+ I also change the format of how the table showing the data. Just chronological order from begin shift -> begin break -> end break -> end shift